<resources>
    <string name="app_name">IdeoChallenge</string>
    <string name="API_KEY">AIzaSyCn8rKejAjetfr95vE7yKpe8Bl_v2E8n3s</string>
    <string name="name_maps">Maps</string>
    <string name="normal_map">Normal</string>
    <string name="satellite_map">Satellite</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="terrain_map">Terrain</string>
    <string name="name_tools">Tools</string>
    <string name="time_x_1">time x 1</string>
    <string name="time_x_4">time x 4</string>
    <string name="time_x_8">time x 8</string>
    <string name="new_route">New route</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title">title</string>
    <string name="visitors">Visitors</string>
    <string name="rating">Rating</string>
    <string name="route">Route</string>
    <string name="route_statistic">Route statistic</string>
    <string name="exit">Exit</string>
    <string name="order">Order</string>
    <string name="order_name">by Name A-Z</string>
    <string name="order_visitors">by Visitors</string>
    <string name="order_rating">by Rating</string>
    <string name="destination_statistic">Destination statistic</string>
    <string name="destination">Destination</string>
    <string name="tutorial_description">Player Marker is yours virtual position. To move,
        click and hold until you see the target Target Marker.</string>
    <string name="tutorial_welcome">Welcome in Ideo Challenge :)</string>
    <string name="legend">Legend:</string>
    <string name="player_marker">- Player Marker</string>
    <string name="bot_marker">- Bot Marker</string>
    <string name="target_marker">- Target Marker</string>
    <string name="route_destination">- Route Destination</string>
    <string name="google_nearby_places">- Google Nearby Places</string>
    <string name="ok_btn">OK</string>
</resources>
