<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8sp"
    android:background="@color/transparent"
    android:id="@+id/custom_list_item">

    <TextView
        android:id="@+id/custom_list_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:textColor="@color/txtColor"
        android:textSize="16sp"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/custom_list_visitors"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/txtColor"
        android:textSize="16sp"
        android:text="@string/visitors"/>

    <TextView
        android:id="@+id/custom_list_rating"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/txtColor"
        android:textSize="16sp"
        android:text="@string/rating"/>

</LinearLayout>