<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_png"
    tools:context="com.ideochallenge.activity.RouteStatisticActivity"
    android:id="@+id/route_statistic_layout">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBackgroundColor"
        app:navigationIcon="@drawable/arrow_back"
        android:id="@+id/route_statistic_toolbar">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:padding="8sp"
        android:layout_below="@+id/route_statistic_toolbar"
        android:orientation="horizontal"
        android:id="@+id/route_statistic_head">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            android:text="@string/route"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            android:text="@string/visitors"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            android:text="@string/rating"/>

    </LinearLayout>

    <ListView
        android:id="@+id/route_statistic_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_statistic_head"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/selectorBackground"/>

</RelativeLayout>
