<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_png"
    tools:context="com.ideochallenge.activity.DestinationStatisticActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBackgroundColor"
        app:navigationIcon="@drawable/arrow_back"
        android:id="@+id/destination_statistic_toolbar">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:padding="8sp"
        android:layout_below="@+id/destination_statistic_toolbar"
        android:id="@+id/destination_statistic_head">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/statistic_visitors_txt"
            android:gravity="start|center"
            android:textColor="@color/txtColor"
            android:textSize="18sp"
            android:text="@string/destination"/>

        <TextView
            android:id="@+id/statistic_visitors_txt"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/statistic_rating_txt"
            android:gravity="center"
            android:textColor="@color/txtColor"
            android:textSize="18sp"
            android:text="@string/visitors"/>

        <TextView
            android:id="@+id/statistic_rating_txt"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textColor="@color/txtColor"
            android:textSize="18sp"
            android:text="@string/rating"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/destination_statistic_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destination_statistic_head"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/selectorBackground"/>

</RelativeLayout>
